# Lumio-Summary

./: .env.example  .gitignore  CHANGES.md  README.md  app.py  db.py  lumio_clinical_summary_system_prompt.txt  lumio_dynamic_sections_3_4_prompt_v2.txt  lumio_system_prompt_v2.txt  pyproject.toml  validator.py
format/: Couples_Therapy.md  Emergency.md  Follow_Up_Psychiatric_Consultation.md  Intake.md  Regular_Therapy.md  Room_Change.md  Section_Change.md
prompts/: core_rules_v3.txt  lumio_dynamic_sections_3_4_prompt_v1.txt  lumio_dynamic_sections_3_4_prompt_v2.txt  lumio_system_prompt_v2.txt
prompts/type_prompts/: Couples_Therapy.txt  Emergency.txt  Follow_Up_Psychiatric_Consultation.txt  Intake.txt  Regular_Therapy.txt  Room_Change.txt  Section_Change.txt
