[project]
name = "lumio-summary"
version = "0.1.0"
description = "Lumio Clinical Summary Generator"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45",
    "langchain>=1.3",
    "langchain-anthropic>=1.1",
    "langchain-core>=1.3",
    "pydantic>=2.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "anthropic>=0.50",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = []
